--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -3,8 +3,9 @@
 :description: Multi-Channel in plentymarkets: Set up the interface to the market Kaufland.de in your plentymarkets system.
 :id: LZKL2OG
 :author: team-plenty-channel
-:kaufland:
 :market: Kaufland.de
+
+:kaufland:
 
 link:https://www.Kaufland.de/[Kaufland.de^] is one of the largest fixed price markets in Germany. You can sell items from various product categories on Kaufland.de. Kaufland.de also processes payments for you. In other words, you are neither charged with payment costs nor do you have to worry about debt collection. +
 
@@ -293,6 +294,8 @@ Continue with preparing your variations.
 :option-availability: Kaufland.de
 :web-api:
 
+:kaufland:
+
 include::partial$variation-availability.adoc[]
 
 // Web API required!
@@ -335,7 +338,7 @@ Saving a barcode:
 . Click on *Add* (icon:plus[role="green"]). +
 → The barcode type is added and displayed in the list.
 . Enter the code into the *Code* field.
-. *Save* (icon:save[set=plenty, role="green"]) the settings.
+. *Save* (terra:save[role="green"]) the settings.
 
 [#item-export]
 == Exporting item data
@@ -455,10 +458,6 @@ Creating a catalogue in the assistant:
 | Select the Kaufland account that you want to use with this catalogue.
 | Select the Kaufland account that you want to create a catalogue for.
 
-| Enter a name for this catalogue. The name is shown in the *Data » Catalogues* menu and is not exported to Kaufland.
-| Here you enter an internal name for the Kaufland catalogue. This name is only visible in the *Data » Catalogues* menu in your plentymarkets system and serves a better overview of your catalogues. The name of the catalogue is not exported to Kaufland. +
-Select a meaningful name that helps you keep track of your catalogues. For example, if you create a catalogue for the product category *TVs* and the platform *Germany*, you might call the catalogue *Kaufland: TVs (Germany)*.
-
 | Select a Kaufland country platform on which you want to offer your items. The country platforms that you can select are displayed as country codes. At Kaufland, country platforms are called storefronts.
 | Here you select the Kaufland country platform that you want to create a catalogue for. You define which items you want to sell in this country in the selected product category. You can export different item data to different country platforms. +
 The different country platforms are displayed as country codes, for example *DE* for *Germany*. +
@@ -466,6 +465,10 @@ The different country platforms are displayed as country codes, for example *DE*
 
 | Select a Kaufland product category. Create a catalogue for every Kaufland product category in which you want to offer your items.
 | Here you select the product category that you want to create a catalogue for. You have to create a separate catalogue for each Kaufland product category that you want to offer your items in. For example, you create different catalogues for the product categories *TVs* and *Cameras*.
+
+| Enter a name for this catalogue. The name is shown in the *Data » Catalogues* menu and is not exported to Kaufland.
+| Here you enter an internal name for the Kaufland catalogue. This name is only visible in the *Data » Catalogues* menu in your plentymarkets system and serves a better overview of your catalogues. The name of the catalogue is not exported to Kaufland. +
+Select a meaningful name that helps you keep track of your catalogues. For example, if you create a catalogue for the product category *TVs* and the platform *Germany*, you might call the catalogue *Kaufland: TVs (Germany)*.
 |===
 --
 
@@ -479,6 +482,8 @@ After you have created a catalogue, map the market's data fields to item data sa
 ====
 Use xref:item:managing-items.adoc#500[properties] to export values for marketplace data fields that have no corresponding field in plentymarkets.
 ====
+
+:own-data-fields:
 
 include::partial$catalogue-mapping.adoc[]
 
