--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -343,8 +343,6 @@ Barcode speichern:
 [#artikelexport]
 == Artikeldaten exportieren
 
-//prüfen, ob beide Exportmöglichkeiten parallel laufen oder ob der alte Export abgestellt wird, sobald es Kataloge gibt
-
 * <<#old-export, _Möglichkeit 1:_ Alter Artikeldatenexport>>
 * <<#catalogue-export, _Möglichkeit 2:_ Katalogexport>>
 
@@ -368,7 +366,7 @@ Kategorien verknüpfen:
 . Klicke auf *Übernehmen*. +
 → Die ID der Kaufland.de-Kategorie und der Kategoriepfad werden angezeigt.
 . Wenn du die ID der Kaufland.de-Kategorie bereits kennst, gib die ID in das Feld *Marktplatzkategorie* ein, um sie mit deiner plentymarkets Kategorie zu verknüpfen.
-. Speichere (icon:save[set=plenty]) die Einstellungen.
+. Speichere (terra:save[]) die Einstellungen.
 
 [IMPORTANT]
 .Unterkategorien müssen nicht verknüpft werden
@@ -413,7 +411,7 @@ Merkmal erstellen:
 → Dieser Name wird in der Artikelübersicht im plentyShop angezeigt.
 . Wähle den *Merkmaltyp*.
 . Aktiviere die Option *Kaufland.de*.
-. Speichere (icon:save[set=plenty]) die Einstellungen.
+. Speichere (terra:save[]) die Einstellungen.
 
 Weitere Informationen zur Merkmalverknüpfung bei Kaufland.de findest du auf der Best Practice-Seite xref:maerkte:best-practices-kaufland-merkmalverknuepfung.adoc#[Merkmale mit Attributen verknüpfen].
 
