udpate bankdaten-verwalten.adoc

--- a/docs/de-de/modules/willkommen/pages/schnelleinstieg-zahlungsabwicklung.adoc
+++ b/docs/de-de/modules/willkommen/pages/schnelleinstieg-zahlungsabwicklung.adoc
@@ -84,6 +84,6 @@ Die Einstellungen zu Steuersätzen sowie die weiteren Optionen im Tab *Buchhaltu
 * xref:auftraege:buchhaltung.adoc#[Buchhaltung]
 * xref:payment:zahlungsarten-verwalten.adoc#[Zahlungsarten verwalten]
 * xref:payment:beta-zahlungen-verwalten.adoc#[Zahlungen verwalten]
-* xref:payment:bankdaten-verwalten.adoc#63[Bankdaten von Kund:innen speichern]
+* xref:payment:bankdaten-verwalten.adoc#bankdaten-kunden[Bankdaten von Kund:innen speichern]
 
 TIP: Weiter zum Thema xref:willkommen:schnelleinstieg-versandoptionen.adoc#[Versandoptionen einrichten].
