--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -2280,7 +2280,7 @@ Bei Bedarf auf *Neue Lieferanschrift* klicken, um eine neue Lieferanschrift anzu
 *Lieferanschrift exportieren* = Exportiert die Lieferanschrift im für den gewünschten Versanddienstleister ausgewählten Export-Format.
 
 | *Bankdaten*
-|Auf das *kleine Plus* klicken, um die xref:payment:bankdaten-verwalten.adoc#63[Bankdaten des Kunden] einzublenden und bei Bedarf zu bearbeiten.
+|Auf das *kleine Plus* klicken, um die xref:payment:bankdaten-verwalten.adoc#bankdaten-kunden[Bankdaten des Kunden] einzublenden und bei Bedarf zu bearbeiten.
 
 | *Kundennotizen*
 |Du wirst weitergeleitet zum Bereich xref:crm:messenger.adoc#[Messenger] des Kontaktdatensatzes. Hier kannst du entweder eine *Neue Nachricht* (icon:plus-square[role="green"]) erstellen oder bereits vorhandene Nachrichten einsehen.
