--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -4,19 +4,19 @@
 :keywords: Bank, Bankdaten, EBICS, SEPA, SEPA-Lastschriftmandat, Lastschrift, Bankinformationen, Konto, Bankkonto, Kontoinhaber, Kontonummer, Konto-Nr., Konto-Nummer, BLZ, Bankleitzahl, Account, IBAN, Bankverbindung, BIC, Mandat, Einzugsermächtigung, Abbuchungsauftrag, Bankdaten, Zahlungsverkehrsdaten, EBICS-Konto, Vormerkposten, Geschäftskonto, Geschäftskonten, Auszugsbereitstellung, buchungstagsorientiert, Buchungstag, auszugsorientiert, Auszugsnummer, Auszusgserstellung, technischer Teilnehmer, Buchung, Buchungen, STA, VMK, EU Typ, EU TYP T, Typ T, Kontoeinstellungen, Tagesumsatz, Tagesumsätze, Geschäftsvorfall, Geschäftsvorfälle, Zahlungsabruf, manueller Zahlungsabruf, INI, INI-Brief, Initialisierung, HIA, CAMT, Abrufintervall, Transaktion, Kreditinstitut, Überweisung, Lastschrift, Firmenlastschrift, Zahlungsempfänger, Gläubiger-Identifikationssnummer, Mandatsreferenz
 :author: team-fulfillment-payment
 
-Auf dieser Handbuchseite erfährst du, wie du deine xref:payment:bankdaten-verwalten.adoc#10[Bankinformationen] und die xref:payment:bankdaten-verwalten.adoc#63[Bankdaten deiner Kund:innen] in plentymarkets speicherst und wie du xref:payment:bankdaten-verwalten.adoc#69[EBICS] und xref:payment:bankdaten-verwalten.adoc#220[SEPA] einrichtest.
+Auf dieser Handbuchseite erfährst du, wie du deine <<#eigene-bankdaten, Bankdaten>> und die <<#bankdaten-kunden, Bankdaten deiner Kund:innen>> in plentymarkets speicherst und wie du <<#69, EBICS>> und <<#220, SEPA>> einrichtest.
 
-[#10]
+[#eigene-bankdaten]
 == Eigene Bankdaten speichern
 
-Die Bankdaten, die in den Grundeinstellungen zentral gespeichert werden, sind global im gesamten System verknüpft. Die gespeicherten Bankdaten gelten somit für alle Mandanten. Es ist nicht möglich, unterschiedliche Bankdaten für verschiedene Mandanten zu speichern. Eine Korrektur der Bankdaten ist ausschließlich im Menü *Einrichtung » Einstellungen » Bank* vorzunehmen. Änderungen wirken sich auf das gesamte System aus.
+Die Bankdaten, die in den Grundeinstellungen zentral gespeichert werden, sind global im gesamten plentymarkets System verknüpft. Die gespeicherten Bankdaten gelten somit für alle Mandanten. Es ist nicht möglich, unterschiedliche Bankdaten für verschiedene Mandanten zu speichern. Eine Korrektur der Bankdaten ist ausschließlich im Menü *Einrichtung » Einstellungen » Bank* vorzunehmen. Änderungen wirken sich auf das gesamte System aus.
 
 [.instruction]
 Bankdaten speichern:
 
 . Öffne das Menü *Einrichtung » Einstellungen » Bank*.
 . Gib deine Bankdaten ein. Beachte dazu die Erläuterungen in <<#tabelle-bankdaten-speichern>>.
-. *Speichere* (icon:save[set=material, role=darkGrey]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[tabelle-bankdaten-speichern]]
 .Bankdaten speichern
@@ -55,10 +55,10 @@ Verwende die Template-Variable *$BankIban* für E-Mail-Vorlagen, die du über di
 
 |====
 
-[#63]
+[#bankdaten-kunden]
 == Bankdaten von Kund:innen speichern
 
-In einem xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdatensatz] kannst du die Bankdaten der Kund:in speichern. Die Bankdaten benötigst du z.B. für die Zahlungsart xref:payment:lastschrift.adoc#[Lastschrift]. In plentymarkets gibt es auch eine xref:payment:beta-zahlungen-verwalten.adoc#intable-import-customer-bank-data[Importfunktion] der Bankdaten. Beachte dabei jedoch die aktuelle Rechtslage, auch in anderen Lieferländern.
+In einem xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdatensatz] kannst du die xref:crm:kontakt-bearbeiten.adoc#bankdaten[Bankdaten der Kund:in] speichern. Die Bankdaten benötigst du z.B. für die Zahlungsart xref:payment:lastschrift.adoc#[Lastschrift]. In plentymarkets gibt es auch eine xref:payment:beta-zahlungen-verwalten.adoc#intable-import-customer-bank-data[Importfunktion] der Bankdaten. Beachte dabei jedoch die aktuelle Rechtslage, auch in anderen Lieferländern.
 
 [.instruction]
 Bankdaten der Kund:in speichern:
@@ -89,28 +89,28 @@ Die Felder *IBAN* und *Inhaber:in* sind Pflichtfelder.
 |Wähle das Land aus der Dropdown-Liste.
 
 | *SEPA-Lastschriftmandat*
-|Standardmäßig ist das SEPA-Lastschriftmandat _nicht_ aktiviert (icon:toggle_off[set=material, role=darkGrey]). Aktiviere daher die Schaltfläche (icon:toggle_on[set=material, role=skyBlue]), wenn der Kontakt das SEPA-Lastschriftmandat unterschrieben hat. +
+|Standardmäßig ist das SEPA-Lastschriftmandat _nicht_ aktiviert (material:toggle_off[]). Aktiviere daher die Schaltfläche (material:toggle_on[role=skyBlue]), wenn der Kontakt das SEPA-Lastschriftmandat unterschrieben hat. +
 *_Wichtig:_* Erst nach dem Aktivieren dieser Option können die pain.008-Formate für den SEPA-Zahlungsverkehr abgerufen werden. Wie du SEPA-Lastschriften mit einem Prozess automatisch in eine ZIP-Datei exportieren kannst, damit du diese Datei deiner Bank zur Verfügung stellen kannst, ist auf der Handbuchseite xref:automatisierung:aktionen.adoc#410[Aktionen/Steuerelemente] im Handbuchbereich xref:automatisierung:prozesse.adoc#[Prozesse] beschrieben.
 
 | *SEPA-Lastschriftmandat erteilt am*
-|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
-Das Datum, an dem der Kontakt dem SEPA-Lastschriftmandat zugestimmt hat, wird angezeigt. Alternativ kannst du das Datum aus dem Kalender wählen (icon:today[set=material]).
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (material:toggle_on[role=skyBlue]). +
+Das Datum, an dem der Kontakt dem SEPA-Lastschriftmandat zugestimmt hat, wird angezeigt. Alternativ kannst du das Datum aus dem Kalender wählen (material:today[]).
 
 | *Art des Mandats*
-|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (material:toggle_on[role=skyBlue]). +
 Wähle eine Option aus der Dropdown-Liste: +
 *SEPA-Firmen-Lastschrift* = Mit dem Buchungsauftrag (Firmenkund:innen, B2B) vergleichbares Mandat. +
 *SEPA-Basis-Lastschrift* = Mit der Einzugsermächtigung (Standardkund:innen) vergleichbares Mandat.
 
 | *Ausführungsmodalität*
-|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (icon:toggle_on[set=material, role=skyBlue]). +
+|Nur sichtbar, wenn die Option *SEPA-Lastschriftmandat* aktiviert wurde (material:toggle_on[role=skyBlue]). +
 Wähle eine Option aus der Dropdown-Liste: +
 *Einmalige Zahlung* = Wird typischerweise für Standardaufträge verwendet. +
 *Wiederkehrende Zahlung* = Wird typischerweise für regelmäßige Abbuchungen, Abo-Verträge etc. verwendet.
 
 |====
 
-[#69]
+[#ebics]
 == EBICS
 
 EBICS (Electronic Banking Internet Communication Standard) bezeichnet einen in Deutschland multibankfähigen Standard für die Übertragung von Zahlungsverkehrsdaten über das Internet. Durch die Umstellung auf das standardisierte EBICS-Verfahren wird der Abruf von Zahlungen vereinfacht und einheitlich. EBICS wird mit dem EBICS-Plugin in dein System eingebunden. Das bedeutet, dass dieses Plugin EBICS vollständig in plentymarkets integriert, der Umweg über Drittanbieter ist nicht erforderlich.
@@ -191,10 +191,10 @@ In <<#table-order-signature-types>> werden die Auftragstypen erläutert, die ple
 |Typ |Erläuterung
 
 | *STA*
-|Tagesumsätze *MT940* bzw. *CAMT053*. Der xref:payment:bankdaten-verwalten.adoc#180[Abruf der Transaktionen] erfolgt am Ende des Tages.
+|Tagesumsätze *MT940* bzw. *CAMT053*. Der <<#180, Abruf der Transaktionen>> erfolgt am Ende des Tages.
 
 | *VMK*
-|Vormerkposten *MT942* bzw. *CAMT052*. Vormerkposten der Transaktionen, die von Bank zu Bank unterschiedlich mehrmals am Tag erzeugt und zum Download bereitgestellt werden. Diese xref:payment:bankdaten-verwalten.adoc#190[Angabe] ist für plentymarkets optional.
+|Vormerkposten *MT942* bzw. *CAMT052*. Vormerkposten der Transaktionen, die von Bank zu Bank unterschiedlich mehrmals am Tag erzeugt und zum Download bereitgestellt werden. Diese <<#190, Angabe>> ist für plentymarkets optional.
 
 | *EU Typ „T“*
 |Unterschriftstyp, der ausschließlich zum Abruf der Transaktionsdaten berechtigt.
@@ -211,7 +211,7 @@ Konto anlegen:
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
 . Klicke auf *Neues Konto erstellen* (icon:plus-square[role="green"]). +
 → Das Fenster *Neues Konto* wird geöffnet.
-. Nimm die Einstellungen gemäß <<#table-ebics-account-settings>> vor.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-account-settings>>.
 . *Speichere* (icon:save[role=green]) die Einstellungen. +
 → Das Konto wird erstellt.
 
@@ -419,7 +419,7 @@ Geschäftsvorfälle verwalten:
 . Klicke auf der Karte des Kontos, das du verwalten willst, auf *Bearbeiten*. +
 → Das Fenster Kontoeinstellungen wird geöffnet.
 . Klicke auf *Geschäftsvorfälle*.
-. Nimm die Einstellungen gemäß <<#table-ebics-settings-transactions>> vor.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-settings-transactions>>.
 . *Speichere* (icon:save[role=green]) die Einstellungen.
 
 [[table-ebics-settings-transactions]]
@@ -547,7 +547,7 @@ Land*
 
 | *X-Achse;  +
 Y-Achse*
-|Die Werte orientieren sich am Koordinatensystem mit X- und Y-Achse. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten. Die Nullpunkte liegen also links oben. Weitere Informationen zum Koordinatensystem findest du unter xref:payment:bankdaten-verwalten.adoc#230[Dokumentenvorlagen].
+|Die Werte orientieren sich am Koordinatensystem mit X- und Y-Achse. Die X-Achse verläuft von links nach rechts und die Y-Achse von oben nach unten. Die Nullpunkte liegen also links oben. Weitere Informationen zum Koordinatensystem findest du im Kapitel <<#230, Dokumentenvorlage erstellen>>.
 
 | *Schriftgröße*
 |Wähle die Schriftgröße in Pixeln.
@@ -569,7 +569,7 @@ Y-Achse*
 [#240]
 === PDF-Vorlage hochladen
 
-Im Tab *PDF-Vorlage* lädst du eine PDF-Vorlage hoch, die das Layout deines Briefpapiers mit Firmendaten und Logo deines Unternehmens beinhaltet. Füge bei der Gestaltung der PDF-Vorlage die erforderlichen Feldnamen für die Werte der Vorlage und im unteren Bereich ein Unterschriftenfeld mit einer Linie für die Unterschrift der Kund:in ein.
+Im Tab *PDF-Vorlage* lädst du eine PDF-Vorlage hoch, die das Layout deines Briefkopfes mit Firmendaten und Logo deines Unternehmens beinhaltet. Füge bei der Gestaltung der PDF-Vorlage die erforderlichen Feldnamen für die Werte der Vorlage und im unteren Bereich ein Unterschriftenfeld mit einer Linie für die Unterschrift der Kund:in ein.
 
 [IMPORTANT]
 .Felder in der PDF-Vorlage einfügen
@@ -593,7 +593,7 @@ PDF-Vorlage hochladen:
 [#250]
 === E-Mail-Vorlage erstellen
 
-Um deinen Kund:innen direkt nach dem Einkauf im Webshop das SEPA-Lastschriftmandat zur Verfügung zu stellen, erstelle eine E-Mail-Vorlage mit dem SEPA-Lastschriftmandat als Anhang. Richte zum Versand der E-Mail eine xref:payment:bankdaten-verwalten.adoc#230[Ereignisaktion] ein.
+Um deinen Kund:innen direkt nach dem Einkauf im Webshop das SEPA-Lastschriftmandat zur Verfügung zu stellen, erstelle eine E-Mail-Vorlage mit dem SEPA-Lastschriftmandat als Anhang. Richte zum Versand der E-Mail eine <<#260, Ereignisaktion>> ein.
 
 [.instruction]
 E-Mail-Vorlage erstellen:
@@ -653,7 +653,7 @@ E-Mail-Vorlage versenden:
 . Klicke auf *Ausführen*. +
 → Die E-Mail-Vorlage wird an die gewählten Kontakte gesendet.
 
-Weitere Details dazu findest du im Kapitel xref:crm:kontakt-bearbeiten.adoc#gruppenfunktion[Gruppenfunktion nutzen] der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten].
+Weitere Details dazu findest du im Kapitel xref:crm:kontakt-bearbeiten.adoc#gruppenfunktion[Gruppenfunktion nutzen] auf der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten].
 
 [#280]
 === SEPA-Zahlungsverkehr in den Bankdaten aktivieren
@@ -672,7 +672,7 @@ SEPA-Lastschriftmandat in den Bankdaten aktivieren:
 . Aktiviere (material:toggle_on[role=skyBlue]) *SEPA-Lastschriftmandat*.
 . *Speichere* (material:save[]) die Einstellungen.
 
-Weitere Informationen zu Bankdaten findest du im Kapitel xref:payment:bankdaten-verwalten.adoc#63[Bankdaten von Kund:innen speichern].
+Weitere Informationen zu Bankdaten findest du im Kapitel <<#bankdaten-kunden, Bankdaten von Kund:innen speichern>>.
 
 [#290]
 === SEPA-Zahlungsverkehr automatisieren
