--- a/docs/de-de/modules/payment/pages/payment.adoc
+++ b/docs/de-de/modules/payment/pages/payment.adoc
@@ -4,7 +4,8 @@
 :keywords: Payment, Zahlungen, Zahlungen verwalten
 :author: team-fulfillment-payment
 
-Ein wichtiges Merkmal im Verkauf sind die angebotenen Zahlungsarten. Fehlt hier die richtige Auswahl, kann es passieren, dass Kund:innen am Ende des Bestellvorgangs den Kauf abbrechen oder gar nicht erst in deinem Webshop kaufen. Um dies zu verhindern, solltest du herausfinden, welche Zahlungsarten von deiner Zielgruppe bevorzugt genutzt werden. Im Themenbereich Payment wird beschrieben, wie du Zahlungsarten und Zahlungsanbieter in plentymarkets einrichtest und verwaltest. Zudem werden die Funktionen und der Umgang mit Zahlungen, Währungen und Bankdaten beschrieben.
+Ein wichtiges Merkmal im Verkauf sind die angebotenen Zahlungsarten. Wenn hier die richtige Auswahl fehlt, kann es passieren, dass Kund:innen am Ende des Bestellvorgangs den Kauf abbrechen oder gar nicht erst in deinem Webshop kaufen. +
+Um dies zu verhindern, solltest du herausfinden, welche Zahlungsarten von deiner Zielgruppe bevorzugt genutzt werden. Im Themenbereich Payment wird beschrieben, wie du Zahlungsarten und Zahlungsanbieter in plentymarkets einrichtest und verwaltest. Zudem werden die Funktionen und der Umgang mit Zahlungen, Währungen und Bankdaten beschrieben.
 
 [.row]
 ====
@@ -26,13 +27,13 @@ Ein wichtiges Merkmal im Verkauf sind die angebotenen Zahlungsarten. Fehlt hier 
 * xref:payment:beta-zahlungen-verwalten.adoc#30[Zahlungen zuordnen]
 * xref:payment:beta-zahlungen-verwalten.adoc#20[Zahlungen suchen]
 * xref:payment:bankdaten-verwalten.adoc#[Bankdaten verwalten]
-* xref:payment:bankdaten-verwalten.adoc#69[EBICS einrichten]
+* xref:payment:bankdaten-verwalten.adoc#ebics[EBICS einrichten]
 * xref:payment:bankdaten-verwalten.adoc#200[SEPA-Lastschriftmandat einrichten]
-* xref:payment:waehrungen.adoc#[Währungen konfigurieren]
+* xref:payment:waehrungen.adoc#[Währungen verwalten]
 =====
 ====
 
 [#400]
 == Zahlungsanbieter und Zahlungsarten
 
-Dir stehen verschiedene Zahlungsanbieter und Zahlungsarten zur Verfügung. Diese werden jeweils über eigene Plugins in dein plentymarkets System eingebunden. Lade dir die Plugins aus dem link:https://marketplace.plentymarkets.com/plugins/payment/payment-integrationen[plentyMarketplace^]herunter, um sie in deinem System zu installieren.
+Dir stehen verschiedene Zahlungsanbieter und Zahlungsarten zur Verfügung. Diese werden jeweils über eigene xref:payment:payment-plugins.adoc#[Plugins] in dein plentymarkets System eingebunden. Lade dir die Plugins aus dem link:https://marketplace.plentymarkets.com/plugins/payment/payment-integrationen[plentyMarketplace^] herunter, um sie in deinem System zu installieren.
