UPDATE catalogue field for sales price

--- a/docs/de-de/modules/daten/pages/elasticSync-lager.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-lager.adoc
@@ -206,7 +206,7 @@ Gib den Lagerorttyp je nach Artikelgröße in deine CSV-Datei ein.
 |Europalette
 |===
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:wareneingaenge-verwalten.adoc#intable-lagerorttyp[Artikel » Artikel bearbeiten » [Artikel öffnen\] » Tab: ID einer Variante » Tab: Lager » Spalte: Lagerorttyp].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:variations-track-stock.adoc#300[Artikel » Artikel bearbeiten » [Variante öffnen\] » Tab: Lager » Spalte: Lagerorttyp].
 
 '''
 
