--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -780,11 +780,13 @@ Vorlage kopieren:
 
 . Öffne das Menü *CRM » EmailBuilder (Testphase)*.
 . Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du kopieren möchtest.
-. Klicke in der Zeile der Vorlage, die du löschen möchtest, auf material:more_vert[]. +
+. Klicke in der Zeile der Vorlage, die du kopieren möchtest, auf material:more_vert[]. +
 → Ein Fenster wird geöffnet.
 . Klicke auf *Kopieren*. +
+→ Die Vorlage wird kopiert und erhält den Zusatz `(copy)`.
 
-// TODO: Konfig ergänzen.
+<<#vorlage-bearbeiten, Bearbeite>> die kopierte Vorlage nun nach deinen Wünschen.
+
 
 [#vorlage-loeschen]
 === Vorlage löschen
