--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -770,6 +770,24 @@ Vorlage bearbeiten:
 . Nimm die Änderungen vor. Beachte dazu auch die Erläuterungen in <<#table-emailbuilder-create-template>>.
 . *Speichere* (material:save[]) die Einstellungen.
 
+[#vorlage-kopieren]
+=== Vorlage kopieren
+
+Du möchtest eine vorhandene Vorlage kopieren, um Zeit bei dem Erstellen einer neuen Vorlage mit ähnlichen Inhalten zu sparen? Gehe wie im Folgenden beschrieben vor.
+
+[.instruction]
+Vorlage kopieren:
+
+. Öffne das Menü *CRM » EmailBuilder (Testphase)*.
+. Klappe den Ordner auf (material:chevron_right[]), der die Vorlage enthält, die du kopieren möchtest.
+. Klicke in der Zeile der Vorlage, die du kopieren möchtest, auf material:more_vert[]. +
+→ Ein Fenster wird geöffnet.
+. Klicke auf *Kopieren*. +
+→ Die Vorlage wird kopiert und erhält den Zusatz `(copy)`.
+
+<<#vorlage-bearbeiten, Bearbeite>> die kopierte Vorlage nun nach deinen Wünschen.
+
+
 [#vorlage-loeschen]
 === Vorlage löschen
 
