--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -3,8 +3,9 @@
 :description: Multi-Channel in plentymarkets: Richte die Schnittstelle zum Martkplatz Kaufland.de in deinem plentymarkets System ein.
 :id: LZKL2OG
 :author: team-plenty-channel
-:kaufland:
 :market: Kaufland.de
+
+:kaufland:
 
 link:https://www.Kaufland.de[Kaufland.de^] ist einer der am schnellsten wachsenden Online-Marktplätze Deutschlands. Auf Kaufland.de kannst du Artikel aus zahlreichen Produktkategorien verkaufen. Die Zahlungsabwicklung übernimmt Kaufland.de für dich. Du trägst also weder Paymentkosten noch Inkassorisiko. +
 
@@ -46,7 +47,7 @@ Zugang zu Kaufland.de einrichten:
 |Einstellung |Erläuterung
 
 | *Anzeigename der Konfiguration*
-| Gib einen aussagekräftigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Wenn du keinen Anzeigenamen eingibst, wird automatisch der Anzeigename `Standard` gespeichert. +
+| Gib einen aussagekräftigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Wenn du keinen Anzeigenamen eingibst, wird automatisch der Anzeigename `Standard-Konfiguration` gespeichert. +
 *_Tipp:_* Der Anzeigename wird nur für die Liste der Konfigurationen verwendet. Der Anzeigename dient also nur dazu, die Liste der Konfigurationen im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » [Mandant öffnen]* übersichtlicher zu machen.
 
 image::maerkte:kaufland-anzeigename.png[]
@@ -281,6 +282,75 @@ Barcode für Kaufland.de festlegen:
 . Speichere (terra:save[]) die Einstellungen. +
 *_Tipp:_* Ist dieser Barcode schon mit deinen Varianten verknüpft? Wenn nicht, dann vergiss nicht, <<#save-barcode, den Barcode mit deinen Varianten zu verknüpfen und einen Code zu speichern>>.
 
+[#prepare-variations]
+== Varianten vorbereiten
+
+Bereite nun deine Varianten vor.
+
+[#300]
+=== Variantenverfügbarkeit einstellen
+
+:market-availability: Kaufland.de
+:option-availability: Kaufland.de
+:web-api:
+
+:kaufland:
+
+include::partial$variantenverfuegbarkeit.adoc[]
+
+// Web-API erforderlich!
+
+[#350]
+=== _Optional:_ SKU speichern
+
+:referrer-sku: Kaufland.de
+:sku-account:
+:referrer-id: 102
+:sku-client:
+
+include::partial$sku-manuell.adoc[]
+
+// Marktplatzkonto erforderlich!
+
+////
+[#mandatory-fields]
+=== Pflichtangaben an Varianten speichern
+
+{market} verlangt bestimmte Pflichtangaben. Nur Varianten werden also an den Marktplatz exportiert, für die diese Angaben gespeichert sind. Für einen funktionierenden Export zu {market} muss die Variante die folgenden Kriterien erfüllen:
+
+* Eine *EAN* oder eine *ISBN*
+
+Wenn die oben aufgelisteten Angaben fehlen, wird die Variante nicht exportiert.
+////
+
+[#save-barcode]
+=== Barcode an Varianten speichern
+
+Varianten müssen einen für {market} aktivierten Barcode haben. Deshalb hast du <<#450, einen Barcode für {market} festgelegt>>. Wenn dieser Barcode noch nicht mit allen Varianten für {market} verknüpft ist, verknüpfe nun den Barcode mit diesen Varianten. Pro Variante speicherst du einen eigenen Barcode-Code.
+
+[.instruction]
+Barcode speichern:
+
+. Öffne das Menü *Artikel » Artikel bearbeiten*.
+. Suche und öffne die Variante.
+. Klicke auf das Tab *Einstellungen* in der unteren Leiste.
+. Wähle im Bereich *Barcode* die Barcode-Konfiguration für {market} aus der Dropdown-Liste.
+. Klicke auf *Hinzufügen* (icon:plus[role="green"]). +
+→ Der Barcode-Typ wird hinzugefügt und in der Liste angezeigt.
+. Gib den Code in das Feld *Code* ein.
+. *Speichere* (terra:save[role="green"]) die Einstellungen.
+
+[#artikelexport]
+== Artikeldaten exportieren
+
+* <<#old-export, _Möglichkeit 1:_ Alter Artikeldatenexport>>
+* <<#catalogue-export, _Möglichkeit 2:_ Katalogexport>>
+
+[#old-export]
+=== _Möglichkeit 1:_ Alter Artikeldatenexport _(alte Methode)_
+
+In diesem Kapitel wird beschrieben, wie du deine Artikeldaten über den alten Export zu {market} exportierst.
+
 [#600]
 === Kategorien verknüpfen
 
@@ -292,7 +362,7 @@ Kategorien verknüpfen:
 . Öffne das Menü *Einrichtung » Märkte » Kaufland.de » Kategorieverknüpfung*.
 . Klicke auf *Suchen* (icon:search[role="blue"]). +
 → Das Fenster *Kategorie wählen* wird geöffnet.
-. Wähle die Kaufland.de-Kategorie, die am besten zu deiner plentymarkets Kategorien passt.
+. Wähle die Kaufland.de-Kategorie, die am besten zu deiner plentymarkets Kategorie passt.
 . Klicke auf *Übernehmen*. +
 → Die ID der Kaufland.de-Kategorie und der Kategoriepfad werden angezeigt.
 . Wenn du die ID der Kaufland.de-Kategorie bereits kennst, gib die ID in das Feld *Marktplatzkategorie* ein, um sie mit deiner plentymarkets Kategorie zu verknüpfen.
@@ -345,61 +415,102 @@ Merkmal erstellen:
 
 Weitere Informationen zur Merkmalverknüpfung bei Kaufland.de findest du auf der Best Practice-Seite xref:maerkte:best-practices-kaufland-merkmalverknuepfung.adoc#[Merkmale mit Attributen verknüpfen].
 
-[#prepare-variations]
-== Varianten vorbereiten
+[#catalogue-export]
+=== _Möglichkeit 2:_ Katalogexport _(empfohlen)_
 
-Bereite nun deine Varianten vor.
+Mit dem Export über Kataloge machst du deinen Artikelexport zukunftssicher und flexibel. Mit dem Katalogexport werden Artikeldaten über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du im Menü *Einrichtung » Assistenten » Omni-Channel* mit dem Assistenten *Kaufland - Kataloge erstellen*. 
 
-[#300]
-=== Variantenverfügbarkeit einstellen
+include::partial$catalogue-new-to-text.adoc[]
 
-:market-availability: Kaufland.de
-:option-availability: Kaufland.de
-:web-api:
+[#create-catalogue]
+==== Katalog erstellen
 
-include::partial$variantenverfuegbarkeit.adoc[]
+Artikeldaten werden über einen Katalog zu Kaufland exportiert. Kataloge für Kaufland erstellst du mit dem Assistenten *Kaufland - Kataloge erstellen* im Menü *Einrichtung » Assistenten » Omni-Channel*. Verknüpfe anschließend im eben erstellten Katalog die von Kaufland vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. +
+Wenn du den Katalog aktiviert hast, werden die Artikeldaten einmal täglich automatisch zu {market} exportiert.
 
-// Web-API erforderlich!
+Für jede Produktkategorie auf Kaufland gibt es ein eigenes Katalog-Format. In jedem Format werden unterschiedliche Artikeldaten exportiert, je nachdem, welche Informationen Kaufland für eine Produktkategorie benötigt. In dem Format für *Fernseher* müssen beispielsweise andere Artikeldaten verknüpft werden als in dem Format für *Kameras*. Du musst also für jede Produktkategorie von Kaufland, in der du Artikel verkaufen möchtest, einen eigenen Katalog erstellen.
 
-[#350]
-=== _Optional:_ SKU speichern
+*_Hinweis:_* Für Kaufland können Kataloge momentan nur mit dem Assistenten *Kaufland - Kataloge erstellen* und _nicht_ über das Menü *Daten » Kataloge* erstellt werden.
 
-:referrer-sku: Kaufland.de
-:sku-account:
-:referrer-id: 102
-:sku-client:
-
-include::partial$sku-manuell.adoc[]
-
-// Marktplatzkonto erforderlich!
-
-////
-[#mandatory-fields]
-=== Pflichtangaben an Varianten speichern
-
-{market} verlangt bestimmte Pflichtangaben. Nur Varianten werden also an den Marktplatz exportiert, für die diese Angaben gespeichert sind. Für einen funktionierenden Export zu {market} muss die Variante die folgenden Kriterien erfüllen:
-
-* Eine *EAN* oder eine *ISBN*
-
-Wenn die oben aufgelisteten Angaben fehlen, wird die Variante nicht exportiert.
-////
-
-[#save-barcode]
-=== Barcode an Varianten speichern
-
-Varianten müssen einen für {market} aktivierten Barcode haben. Deshalb hast du <<#450, einen Barcode für {market} festgelegt>>. Wenn dieser Barcode noch nicht mit allen Varianten für {market} verknüpft ist, verknüpfe nun den Barcode mit diesen Varianten. Pro Variante speicherst du einen eigenen Barcode-Code.
+:number-of-boxes: Info-Box
 
 [.instruction]
-Barcode speichern:
+Katalog mit dem Assistenten erstellen:
 
-. Öffne das Menü *Artikel » Artikel bearbeiten*.
-. Suche und öffne die Variante.
-. Klicke auf das Tab *Einstellungen* in der unteren Leiste.
-. Wähle im Bereich *Barcode* die Barcode-Konfiguration für {market} aus der Dropdown-Liste.
-. Klicke auf *Hinzufügen* (icon:plus[role="green"]). +
-→ Der Barcode-Typ wird hinzugefügt und in der Liste angezeigt.
-. Gib den Code in das Feld *Code* ein.
-. *Speichere* (terra:save[role="green"]) die Einstellungen.
+. Öffne das Menü *Einrichtung » Assistenten » Omni-Channel*.
+. Klicke auf den Assistenten *Kaufland - Kataloge erstellen*.
+. Folge den Anweisungen auf dem Bildschirm. Wenn du zusätzliche Informationen zu einer der Optionen benötigst, klappe die {number-of-boxes} unter dieser Beschreibung auf (icon:chevron-down[role="darkGrey"]).
+. Prüfe im Schritt *Zusammenfassung* deine Einstellungen noch einmal auf mögliche Fehler. +
+*_Tipp:_* Klicke im Schritt *Zusammenfassung* auf den Pfeil nach unten (icon:chevron-down[role="darkGrey"]), um die Einstellungen auszuklappen.
+. Wenn alles passt, klicke auf icon:check[role="green"] *Abschließen*. +
+→ Die Einstellungen werden gespeichert. +
+
+[.collapseBox]
+.Schritt *Katalog für Kaufland erstellen*
+--
+[[table-assistant-kaufland]]
+[cols="1,3a"]
+|===
+|Einstellung |Erläuterung
+
+| Für welches Kaufland-Konto soll dieser Katalog genutzt werden?
+| Wähle das Kaufland-Konto, für das ein Katalog erstellt werden soll.
+
+| Wähle eine Kaufland-Länderplattform, auf der du deine Artikel anbieten möchtest. Die verfügbaren Länderplattformen werden als Ländercodes angezeigt. Bei Kaufland heißen die Länderplattformen Storefronts.
+| Hier wählst du die Kaufland-Länderplattform, für die ein Katalog erstellt werden soll. Du legst also in diesem Katalog fest, welche Artikel du in diesem Land in der gewählten Produktkategorie verkaufen möchtest. Du kannst unterschiedliche Artikeldaten an verschiedene Länderplattformen exportieren. +
+Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. +
+*_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar.
+
+| Für welche Kaufland-Kategorie soll ein Katalog erstellt werden? Erstelle einen Katalog für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest.
+| Hier wählst du die Produktkategorie, für die ein Katalog erstellt werden soll. Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
+
+| Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
+| Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert. +
+Wähle einen Namen, der aussagekräftig ist und dir bei der Übersicht über deine Kataloge hilft. Wenn du einen Katalog für die Produktkategorie *Fernseher* und die Plattform *Deutschland* erstellst, kannst du den Katalog zum Beispiel *Kaufland: Fernseher (DE)* nennen.
+|===
+--
+
+[#data-field-mappings]
+==== Datenfelder im Katalog zuordnen
+
+Nachdem du einen Katalog erstellt hast, ordnest du die Datenfelder des Marktplatzes den in plentymarkets gespeicherten Artikeldaten zu. In diesem Kapitel erfährst du, wie du Datenfelder zuordnest und welche Besonderheiten es bei {market} gibt.
+
+[TIP]
+.Eigenschaften verwenden
+====
+Verwende xref:artikel:eigenschaften.adoc#500[Eigenschaften], um Werte für Marktplatz-Datenfelder zu übergeben, für die es keine Entsprechung in plentymarkets gibt.
+====
+
+:own-data-fields:
+
+include::partial$catalogue-mapping.adoc[]
+
+[#906]
+==== Empfehlungen für Datenfeld-Zuordnungen
+
+include::partial$recommendation-text.adoc[]
+
+//empfohlene Mappings einfügen
+[.collapseBox]
+.Liste mit empfohlenen Datenfeld-Zuordnungen
+--
+include::partial$kaufland-recommended-mappings.adoc[]
+--
+
+[#activate-catalogue]
+==== Katalogexport aktivieren
+
+[IMPORTANT]
+.Artikel werden nur exportiert, wenn der Katalog aktiviert wurde
+====
+Artikeldaten werden nur zu Kaufland exportiert, wenn der Katalog im Menü *Daten » Kataloge* aktiviert wurde. +
+Wenn du für eine Kaufland-Produktkategorie noch keinen Katalog erstellt hast, werden Artikel dieser Produktkategorie über den alten Artikelexport zu Kaufland exportiert.
+====
+
+//Intervall der Datenübertragung prüfen
+:interval: einmal täglich
+
+include::partial$catalogue-activation.adoc[]
 
 [#850]
 == Vorlage für Rechnungen anpassen
@@ -470,7 +581,7 @@ Richte xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] ein, um {ma
 //* Neu: In-Fulfillment-Bestätigung senden (<<#in-fulfillment, Wie?>>)
 
 [#shipping-confirmation]
-=== NEU: Versandbestätigung senden
+=== Versandbestätigungen senden
 
 Richte eine xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktion] ein, um {market} darüber zu informieren, dass die Artikel eines Auftrags versendet wurden. +
 *_Tipp:_* In der Liste *Aktion hinzufügen* findest du die Aktion *Versandbestätigung an Kaufland.de senden* im Ordner *Plugins*.
