amazon invoice numbers - de+en

--- a/docs/en-gb/modules/markets/partials/invoice-creation.adoc
+++ b/docs/en-gb/modules/markets/partials/invoice-creation.adoc
@@ -38,11 +38,8 @@ Also read the <<markets/amazon/amazon-setup#markets/amazon/best-practices-amazon
 
 VCS is an optional service. If you activate this service in Amazon Seller Central, Amazon calculates the VAT for your Amazon orders. If you do not want to use Amazon VCS, you can upload invoice documents created in plentymarkets to Amazon (Amazon Invoice Document Uploader - IDU). To do so, proceed as described below.
 
-[TIP]
-.Send shipping confirmation first
-====
-You can only upload invoices to Amazon after a shipping confirmation was sent to Amazon.
-====
+* You can only upload invoices to Amazon after a shipping confirmation was sent to Amazon.
+* Amazon rejects invoices if the invoice number contains spaces. As such, make sure that your invoice numbers do not contain any spaces.
 
 [.instruction]
 Activating Amazon IDU in plentymarkets:
@@ -84,11 +81,8 @@ include::_includes:partial$event-procedure.adoc[]
 
 If you select VCS plentymarkets, Amazon calculates the VAT, but invoices for Amazon orders are created by plentymarkets and automatically uploaded to Amazon. Amazon calls this option VCS Lite.
 
-[TIP]
-.Send shipping confirmation first
-====
-You can only upload invoices to Amazon after a shipping confirmation was sent to Amazon.
-====
+* You can only upload invoices to Amazon after a shipping confirmation was sent to Amazon.
+* Amazon rejects invoices if the invoice number contains spaces. As such, make sure that your xref:orders:order-documents.adoc#1800[number range for invoices] does not contain any spaces.
 
 ==== Activating VCS plentymarkets/VCS Lite in Amazon Seller Central
 
