--- a/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
+++ b/docs/de-de/modules/crm/pages/praxisbeispiel-tracking-url-senden.adoc
@@ -3,18 +3,17 @@
 :description: Dieses Praxisbeispiel beschreibt, wie du die Tracking-URL automatisch an deine Kund:innen sendest, wenn der Warenausgang gebucht wurde.
 :author: team-crm
 
-Ich möchte eine Tracking-URL an meine Kund:innen senden, sobald der Warenausgang gebucht wurde. Wie geht das?
+Ich möchte eine Tracking-URL an meine Kund:innen senden, sobald der Warenausgang gebucht wurde. Was muss ich tun?
 
 [discrete]
 == Erforderliche Schritte (Kurzform)
 
 * Tracking-URL speichern
 * E-Mail-Vorlage einrichten
-* Variable `Tracking-URL` in Vorlage einfügen
+** Variable `Tracking-URL` in Vorlage einfügen
 * Ereignisaktion verknüpfen, die die Vorlage versendet, wenn der Warenausgang gebucht wurde
 ** Der Tracking-Link funktioniert natürlich erst, wenn das Paket beim Dienstleister registriert ist und eine Paketnummer am Auftrag erstellt wurde.
-
-// prüfen, ob der letzte Punkt stimmt.
+// TODO: prüfen, ob der letzte Punkt stimmt.
 // TODO: Info: Paketnummer und PLZ ist Teil der Tracking-URL → hier nochmal Ievgenii fragen.
 
 [#tracking-url-speichern]
@@ -23,17 +22,17 @@ Ich möchte eine Tracking-URL an meine Kund:innen senden, sobald der Warenausgan
 Viele Versanddienstleister bieten eine Sendungsverfolgung mittels Tracking-URL an. Eine funktionsfähige Tracking-URL enthält die Paketnummer und oftmals die Postleitzahl der Person, die das Paket empfangen soll.
 Du kannst deinen Kund:innen die Tracking-URL in einer E-Mail zur Versandmitteilung senden, damit diese den aktuellen Status ihrer Sendungen beim Versanddienstleister sowie den voraussichtlichen Zeitpunkt der Zustellung einsehen können.
 
-Du musst also zunächst die Tracking-URL am Versanddienstleister speichern. Gehe dazu ins Menü *Einrichtung » Aufträge » Versand » Optionen* in das Tab *Versanddienstleister*. Gib dort im Feld *Tracking-URL* die Tracking-URL ein und speichere die Einstellung.
+Speichere daher also zunächst die Tracking-URL am Versanddienstleister. Gehe dazu ins Menü *Einrichtung » Aufträge » Versand » Optionen* in das Tab *Versanddienstleister*. Gib dort im Feld *Tracking-URL* die Tracking-URL ein.
 
+[TIP]
+.Du kennst die Tracking-URL nicht?
+====
 Wenn du die Tracking-URL des Versanddienstleisters nicht kennst, gehe folgendermaßen vor:
 
 * Wirf einen Blick in unser Handbuch. Wir haben dort die aktuell gültigen, uns bekannten Tracking-URLs in den jeweiligen Unterkapiteln zum Versanddienstleister aufgelistet. Über das Kapitel xref:fulfillment:versand-vorbereiten.adoc#2500[Versanddienstleister im Überblick] gelangst du auf die Unterkapitel der Versanddienstleister und kannst nachschauen, ob dort die Tracking-URL hinterlegt ist.
 
 * Wenn du dort die gewünschte Information nicht findest, wende dich bitte an deine Ansprechpartner:in bei dem jeweiligen Versanddienstleister und erfrage die korrekte, aktuell gültige Tracking-URL.
-
-// TODO: Info aus der Box unterhalb der Tabelle (https://knowledge.plentymarkets.com/de-de/manual/main/fulfillment/versand-vorbereiten.html#800) auch im Praxisbeispiel ergänzen:
-
-
+====
 
 [#vorlage-mit-variable-erstellen]
 == E-Mail-Vorlage mit Variable der Tracking-URL erstellen
@@ -55,19 +54,33 @@ E-Mail-Vorlage mit dem EmailBuilder erstellen:
 . Klicke in der Zeile des Ordners, in dem du eine Vorlage erstellen möchtest, auf material:more_vert[]. +
 → Ein Fenster wird geöffnet.
 . Klicke auf material:add[] *Neue Vorlage*.
-. Gib einen Namen für die Vorlage ein, z.B. Versandbestätigung.
-. Gib einen Betreff für die Vorlage ein.
-. *Speichere* die Einstellungen.
+. Gib einen Namen für die Vorlage ein, z.B. `Paketverfolgung`.
+. Gib einen Betreff für die Vorlage ein, z.B. `Dein Paket kommt bald`.
+. Wähle je einen xref:crm:emailbuilder.adoc#vorlage-header-footer[Header und Footer] aus den Dropdown-Listen.
+. *Speichere* die Einstellungen. +
+→ Das Speichern ist erforderlich, damit du nun den Inhalt der Vorlage bearbeiten kannst.
+. Klicke in der Zeile material:expand_more[] *Inhalt* auf *Bearbeiten* (material:edit[]). +
+→ Der Editor mit den Widgets wird geöffnet.
+. Ziehe das Widget *Text* in den schraffierten Bereich.
+. Klicke auf material:edit[].
+. Gib im Textfeld den gewünschten Text ein und suche dir über das Textfeld *Suche* in der Spalte *Variablen* die passenden Variablen, die du benötigst.
 
 
-
+//TODO: Screenshot einfügen von EmailBuilder-Editor und von der Vorschau. PID: 51054 / Ordner: test / Vorlage: Link zur Paketverfolgung
 
 [.collapseBox]
 .E-Mail-Vorlage über den Mandanten erstellen ("alte" Vorgehensweise)
 --
-// TODO: Konfig ergänzen.
+*_Hinweis:_* Das Erstellen von E-Mail-Vorlagen funktioniert aktuell auch noch über den alten Weg, also über die Vorlagen direkt am Mandant. 
+
+Erstelle die E-Mail-Vorlage im Menü *Einrichtung » Mandant » [Mandant wählen] » E-Mail » Vorlagen*. Füge nun die Template-Variable `$TrackingURL` direkt in deine Vorlage ein.
+
 --
 
+[#ereignisaktion einrichten]
+== Ereignisaktion einrichten
+
+// TODO: ergänzen + Screenshot aus dem Backend einfügen
 
 [#weiterfuehrende-links]
 == Weiterführende Handbuch-Links
