ADD language IDs

--- a/docs/de-de/modules/daten/pages/interne-IDs.adoc
+++ b/docs/de-de/modules/daten/pages/interne-IDs.adoc
@@ -37,11 +37,32 @@ In plentymarkets werden die in <<tabelle-interneIDs-sprachen>> gelisteten Sprach
 |es
 |Spanisch
 
+|et
+|Estnisch
+
+|fi
+|Finnisch
+
 |fr
 |Französisch
 
+|ga
+|Irisch
+
+|hr
+|Kroatisch
+
+|hu
+|Ungarisch
+
 |it
 |Italienisch
+
+|lt
+|Litauisch
+
+|lv
+|Lettisch
 
 |nl
 |Niederländisch
