--- a/docs/de-de/modules/maerkte/partials/rechnungserzeugung.adoc
+++ b/docs/de-de/modules/maerkte/partials/rechnungserzeugung.adoc
@@ -39,7 +39,7 @@ Beachte auch die xref:maerkte:best-practices-amazon-vcs.adoc#[Best Practice-Seit
 Der VCS-Service, bei dem Amazon die Umsatzsteuer für deine Amazon-Aufträge berechnet, ist optional. Wenn du Amazon VCS nicht nutzen möchtest, kannst du eigene Rechnungsdokumente in plentymarkets erstellen und bei Amazon hochladen (Amazon Invoice Document Uploader - IDU). Gehe dazu wie unten beschrieben vor.
 
 * Du kannst Rechnungen erst bei Amazon hochladen, wenn der Versand des Auftrags auf Amazon bestätigt wurde.
-* Amazon lehnt Rechnungen ab, wenn die Rechnungsnummer Leerzeichen enthalten. Dein xref:auftraege:auftragsdokumente.adoc#1800[Nummernkreis für Rechnungen] darf also keine Leerzeichen enthalten.
+* Amazon lehnt Rechnungen ab, wenn die Rechnungsnummer Leerzeichen enthält. Dein xref:auftraege:auftragsdokumente.adoc#1800[Nummernkreis für Rechnungen] darf also keine Leerzeichen enthalten.
 
 [.instruction]
 Amazon IDU in plentymarkets aktivieren:
@@ -82,7 +82,7 @@ include::_includes:partial$event-procedure.adoc[]
 Wenn du dich für VCS plentymarkets entscheidest, berechnet Amazon die Umsatzsteuer, aber Rechnungen für Amazon-Aufträge werden von plentymarkets erstellt und automatisch zu Amazon übertragen. Amazon nennt diese Option VCS Lite.
 
 * Du kannst Rechnungen erst bei Amazon hochladen, wenn der Versand des Auftrags auf Amazon bestätigt wurde.
-* Amazon lehnt Rechnungen ab, wenn die Rechnungsnummer Leerzeichen enthalten. Dein xref:auftraege:auftragsdokumente.adoc#1800[Nummernkreis für Rechnungen] darf also keine Leerzeichen enthalten.
+* Amazon lehnt Rechnungen ab, wenn die Rechnungsnummer Leerzeichen enthält. Dein xref:auftraege:auftragsdokumente.adoc#1800[Nummernkreis für Rechnungen] darf also keine Leerzeichen enthalten.
 
 ==== VCS plentymarkets/VCS Lite in Amazon Seller Central aktivieren
 
