--- a/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
@@ -4,7 +4,8 @@
 :keywords: Zahlungsart, Zahlungsarten, Standardzahlungsart, Standard-Zahlungsart, plugin-zahlungsart, Zahlungsartenübersicht, Zahlart, Zahlarten
 :author: team-fulfillment-payment
 
-Zahlungsarten werden über Plugins eingebunden. Die einzelnen Payment Plugins kannst du im entsprechenden Bereich des link:https://marketplace.plentymarkets.com/plugins/payment[plentyMarketplace^] herunterladen. Anleitungen zur Einrichtung findest du ebenfalls im Marketplace oder im Bereich xref:payment:payment-plugins.adoc#[Payment Plugins] im Handbuch. +
+Zahlungsarten werden über Plugins eingebunden. Die einzelnen Payment Plugins kannst du im entsprechenden Bereich des link:https://marketplace.plentymarkets.com/plugins/payment[plentyMarketplace^] herunterladen. Anleitungen zur Einrichtung findest du ebenfalls im Marketplace oder im Bereich xref:payment:payment-plugins.adoc#[Payment Plugins] im Handbuch.
+
 Auf dieser Handbuchseite erfährst du, welche Einstellungen für Zahlungsarten du beachten solltest. Weiterhin findest du eine xref:payment:zahlungsarten-verwalten.adoc#65[Übersicht der Zahlungsarten in deinem System] sowie der zur Verfügung stehenden xref:payment:zahlungsarten-verwalten.adoc#70[Marktplatz-Zahlungsarten]. Diese Zahlungsarten sind automatisch in deinem plentymarkets System verfügbar, sobald du ein aktives Konto für den entsprechenden Marktplatz hast.
 
 [#25]
@@ -52,7 +53,8 @@ Beachte dazu auch die Handbuchseite xref:warenwirtschaft:warenbestaende-verwalte
 [#65]
 == Übersicht der Zahlungsarten im System
 
-Im Menü *Einrichtung » Aufträge » Zahlung » Zahlungsarten* findest du eine Übersicht über die Zahlungsarten und deren IDs in deinem plentymarkets System. Standardmäßig werden dir hier die Plugin-Zahlungsarten angezeigt. Möchtest du alle im System vorhandenen Zahlungsarten einsehen, nutze den Toggle (icon:toggle_on[set=material, role=skyBlue]) oberhalb der Tabelle.
+Im Menü *Einrichtung » Aufträge » Zahlung » Zahlungsarten* findest du eine Übersicht über die Zahlungsarten und deren IDs in deinem plentymarkets System. +
+Standardmäßig werden hier alle Plugin-Zahlungsarten angezeigt (material:toggle_off[]). Möchtest du alle im System vorhandenen Zahlungsarten sehen? Dann ändere die Schaltfläche oberhalb der Tabelle von material:toggle_off[] *Es werden alle Plugin-Zahlungsarten angezeigt* auf material:toggle_on[role=skyBlue] *Es werden alle im System vorhandenen Zahlungsarten angezeigt*.
 
 In der Übersicht lassen sich keine Zahlungsarten aktivieren. Möchtest du Zahlungsarten in dein plentymarkets System einbinden und deinen Kund:innen zur Verfügung stellen, musst du das entsprechende Plugin im link:https://marketplace.plentymarkets.com/plugins/payment[plentyMarketplace^] herunterladen. Anleitungen zur Einrichtung findest du ebenfalls im Marketplace oder im Bereich xref:payment:payment-plugins.adoc#[Payment Plugins] im Handbuch.
 
@@ -62,33 +64,33 @@ In der Übersicht lassen sich keine Zahlungsarten aktivieren. Möchtest du Zahlu
 |====
 |Tabellenspalte |Erläuterung
 
-|*ID*
+| *ID*
 |Die eindeutige ID der Zahlungsart. +
 Dies ist eine Standardspalte.
 
-|*Zahlungsart*
+| *Zahlungsart*
 |Der Name der Zahlungsart. +
 Dies ist eine Standardspalte.
 
-|*Suchbar im Backend*
-|Ist eine Zahlungsart suchbar im Backend, wird sie an allen Stellen im System, an denen du eine Zahlungsart auswählen kannst, angezeigt. Zum Beispiel in Dropdown-Listen in Ereignisaktionen etc. +
-icon:check_circle[set=material, role=green] = Die Zahlungsart ist suchbar im Backend. +
-icon:cancel[set=material, role=red] = Die Zahlungsart ist nicht suchbar im Backend. +
+| *Suchbar im Backend*
+|Wenn eine Zahlungsart im Backend suchbar ist, wird sie an allen Stellen im System, an denen du eine Zahlungsart wählen kannst, angezeigt. Zum Beispiel in den Dropdown-Listen in xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] oder in xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen]. +
+material:check_circle[role=green] = Die Zahlungsart ist suchbar im Backend. +
+material:cancel[role=red] = Die Zahlungsart ist _nicht_ suchbar im Backend. +
 Dies ist eine Standardspalte.
 
-|*Aktiv im Backend*
-|Ist eine Zahlungsart im Backend aktiv, kann sie einem Auftrag bei manueller Auftragserstellung zugewiesen werden. Zudem ist sie auch suchbar im Backend, d.h. sie wird an allen Stellen im System, an denen du eine Zahlungsart auswählen kannst, angezeigt. Zum Beispiel in Dropdown-Listen in Ereignisaktionen etc. +
-icon:check_circle[set=material, role=green] = Die Zahlungsart ist im Backend aktiv. +
-icon:cancel[set=material, role=red] = Die Zahlungsart ist nicht im Backend aktiv. +
+| *Aktiv im Backend*
+|Wenn eine Zahlungsart im Backend aktiv ist, kann sie einem Auftrag bei manueller Auftragserstellung zugewiesen werden. Außerdem ist die Zahlungsart auch suchbar im Backend, d.h. sie wird an allen Stellen im System, an denen du eine Zahlungsart wählen kannst, angezeigt. Zum Beispiel in den Dropdown-Listen in xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen] oder in xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen]. +
+material:check_circle[role=green] = Die Zahlungsart ist im Backend aktiv. +
+material:cancel[role=red] = Die Zahlungsart ist _nicht_ im Backend aktiv. +
 Dies ist eine Standardspalte.
 
-|*Zahlungsart Abonnement*
-|Zeigt an, ob die Zahlungsart für Abonnements genutzt werden kann. Dies sind die Zahlungsarten Rechnung, Vorkasse und Lastschrift. +
-Dies ist keine Standardspalte.
+| *Zahlungsart Abonnement*
+|Zeigt an, ob die Zahlungsart für xref:auftraege:abonnement.adoc#[Abonnements] genutzt werden kann. Dies sind die Zahlungsarten Rechnung, Vorkasse und Lastschrift. +
+Dies ist _keine_ Standardspalte.
 
-|*pluginKey* und *paymentKey*
+| *pluginKey* und *paymentKey*
 |Dies sind eindeutige Werte, mit denen man eine Zahlungsart systemweit identifizieren kann. Sie werden beim Registrieren einer Zahlungsart durch die Entwickler:in bestimmt. Nutzbar sind diese Werte vor allem für Entwickler:innen, z.B. wenn man die ID einer Zahlungsart aus dem System auslesen möchte. +
-Dies ist keine Standardspalte.
+Dies ist _keine_ Standardspalte.
 
 |====
 
@@ -109,7 +111,6 @@ Marktplatz-Zahlungsarten sind Zahlungsarten, die in Verbindung mit der Einrichtu
 * xref:maerkte:neckermann-at-einrichten.adoc#1600[Neckermann.at]
 * xref:maerkte:plus-gartenxxl.adoc#400[Netto]
 * xref:maerkte:otto-market.adoc#425[OTTO Payment]
-// * xref:maerkte:pixmania.adoc#800[PIXmania]
 * xref:maerkte:shopgate.adoc#600[Shopgate Payment]
 * xref:maerkte:yatego.adoc#900[Yatego Rechnung]
 * xref:maerkte:zalando.adoc#800[Zalando Payment]
