update some formatting on bankdaten-verwalten

--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -258,7 +258,7 @@ Diese Option ist nur beim Erstellen eines Kontos verfügbar.
 |Wähle aus der Dropdown-Liste, mit welchem Verfahren die Vormerkposten abgerufen werden sollen. Details dazu erhältst du von deiner Bank.
 
 | *Tagesumsätze*
-|Wähle aus der Dropdown-Liste wählen, mit welchem Verfahren die Tagesumsätze abgerufen werden sollen. Details dazu erhältst du von deiner Bank.
+|Wähle aus der Dropdown-Liste, mit welchem Verfahren die Tagesumsätze abgerufen werden sollen. Details dazu erhältst du von deiner Bank.
 
 | *IBAN/Kontonummer*
 |Gib die IBANs bzw. Kontonummern der verknüpften Konten kommasepariert ein. Das CAMT-Format benötigt die Eingabe der IBAN, das MT-Format benötigt die Eingabe der Kontonummer.
@@ -359,13 +359,13 @@ Für den fehlerfreien Download des INI-Briefs muss der Pop-up-Blocker deines Bro
 Konto initialisieren:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
-. Klicke auf der Karte des Kontos, das du initialisieren willst, auf *Bearbeiten*. +
-→ Das Tab Kontoeinstellungen wird geöffnet.
+. Klicke auf der Karte des Kontos, das du initialisieren möchtest, auf *Bearbeiten*. +
+→ Das Tab *Kontoeinstellungen* wird geöffnet.
 . Klicke auf *Konto initialisieren*. +
 → Die Schlüssel werden generiert, INI und HIA werden ausgeführt. +
-→ Sind alle Vorgänge erfolgreich abgeschlossen, wird die Schaltfläche INI-Brief erstellen aktiviert.
+→ Wenn alle Vorgänge erfolgreich abgeschlossen sind, wird die Schaltfläche *INI-Brief erstellen* aktiviert.
 . Klicke auf *INI-Brief erstellen*. +
-→ Der INI-Brief wird als pdf-Dokument heruntergeladen.
+→ Der INI-Brief wird als PDF-Dokument heruntergeladen.
 . Unterschreibe den INI-Brief und übermittele ihn an deine Bank. +
 → Die Bank prüft die Daten und gibt das Konto frei. Du erfährst von deiner Bank, wann dieser Vorgang abgeschlossen ist.
 . Klicke auf *Initialisierung abschließen (HPB)*. +
@@ -416,8 +416,8 @@ Geschäftsvorfälle sind die bankfachlichen Auftragsarten, die du mit deinem Kre
 Geschäftsvorfälle verwalten:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
-. Klicke auf der Karte des Kontos, das du verwalten willst, auf *Bearbeiten*. +
-→ Das Fenster Kontoeinstellungen wird geöffnet.
+. Klicke auf der Karte des Kontos, das du verwalten möchtest, auf *Bearbeiten*. +
+→ Das Fenster *Kontoeinstellungen* wird geöffnet.
 . Klicke auf *Geschäftsvorfälle*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-settings-transactions>>.
 . *Speichere* (icon:save[role=green]) die Einstellungen.
@@ -456,15 +456,15 @@ Wenn auf deinem Konto Zahlungen eingehen, deren Geschäftsvorfall du nicht aktiv
 Inaktive Geschäftsvorfälle laden:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
-. Klicke auf der Karte des Kontos, das du bearbeiten willst, auf *Bearbeiten*. +
+. Klicke auf der Karte des Kontos, das du bearbeiten möchtest, auf *Bearbeiten*. +
 → Das Fenster *Kontoeinstellungen* wird geöffnet.
 . Klicke auf *Geschäftsvorfälle*.
 . Klicke auf *Inaktive Geschäftsvorfälle laden*. +
 → Das Fenster zur Suche wird geöffnet.
-. Gib das Datum ein, für das du die Geschäftsvorfälle laden willst.
+. Gib das Datum ein, für das du die Geschäftsvorfälle laden möchtest.
 . Klicke auf *Suchen*. +
 → Alle Zahlungen des eingegebenen Tages, für die keine Geschäftsvorfälle aktiv sind, werden angezeigt.
-. Wähle die Geschäftsvorfälle, die du aktivieren willst.
+. Wähle die Geschäftsvorfälle, die du aktivieren möchtest.
 . *Speichere* (icon:save[role=green]) die Einstellungen. +
 → Die Geschäftsvorfälle sind aktiviert.
 
