REFACTOR information about changing the warehouse structure, as requested by the azure card

--- a/docs/en-gb/modules/stock-management/pages/setting-up-a-warehouse.adoc
+++ b/docs/en-gb/modules/stock-management/pages/setting-up-a-warehouse.adoc
@@ -364,84 +364,6 @@ Use the status *Locked in status 4* in order to block items in a storage locatio
 Note that blocked stock will still be available for the marketplaces.
 ====
 
-[#520]
-=== Customising warehouse structures
-
-You can customise the structures of your warehouse and for example change the name of the level, modify the level position or add new levels and storage locations and directly place them at the desired location.
-If an element has been moved, all positions are updated automatically.
-
-[.instruction]
-Moving an existing element:
-
-. Go to *Setup » Stock » Warehouse*.
-. Select a warehouse.
-. Click on *Storage locations*. +
-→ The overview opens.
-. At the top, click on *Adjust structure*. +
-→ The warehouse structure opens.
-. Click on the element you want to move.
-. Click on *Move*. +
-→ The settings open.
-. Select the placement.
-. Select the target and click on the check mark *Select*.
-. *Save* (icon:save[role="green"]) the settings. +
-→ The element is moved.
-
-[.instruction]
-Placing a new storage location in the warehouse structure:
-
-. Go to *Setup » Stock » Warehouse*.
-. Select a warehouse.
-. Click on Storage locations. +
-→ The overview opens.
-. Click on *Adjust structure*. +
-→ The warehouse structure opens.
-. Click on icon:plus[role="darkGrey"] *New storage location*. +
-→ The settings open.
-. Carry out the settings. Pay attention to the explanations given in <<table-adjust-warehouse-structure>>.
-. *Save* (icon:save[role="green"]) the settings. +
-→ The structure is updated accordingly.
-
-[[table-adjust-warehouse-structure]]
-.Adjusting warehouse structure
-[cols=”1,3”]
-|====
-|Setting |Explanation
-
-| *Name*
-|Enter the name of the new storage location.
-
-| *Placement*
-|Select whether you want to insert it in front of or behind an existing element.
-
-| *Position*
-|Enter the position of the element.
-
-| *Purpose*
-|Select the purpose from the drop-down list.
-
-| *Target*
-|Select the target.
-
-| *Status*
-|Select the status from the drop-down list.
-
-| *Notes*
-|Here you can take notes regarding the storage location.
-
-| *Availability*
-|Indicates, whether a storage location is available. Green means that the storage location does not contain any items; red signals that at least one item is available.
-
-| *Property*
-|Select the property of the storage location. Properties have to be xref:stock-management:setting-up-a-warehouse.adoc#900[created] in advance.
-|====
-
-[IMPORTANT]
-.Deleting levels and storage locations
-====
-You can only delete a level if it does not contain any storage locations. When deleting a storage location, make sure that it does not contain any stock.
-====
-
 [#530]
 === Limitations
 
@@ -450,7 +372,7 @@ When creating dimensions or generating storage locations there are some limitati
 [[table-limitations-for-dimensions]]
 .Limitations for dimensions
 [cols="3,1"]
-|====
+|===
 |Setting |Limitation
 
 | *Maximum number of dimensions that can be created*
@@ -464,12 +386,12 @@ When creating dimensions or generating storage locations there are some limitati
 
 | *Number of characters for the prefix (no numbers)*
 |3
-|====
+|===
 
 [[table-limitations-generating-storage-locations]]
 .Limitations for generating storage locations
 [cols="3,1"]
-|====
+|===
 |Setting |Limitation
 
 | *Maximum number of storage locations per dimension*
@@ -489,12 +411,12 @@ When creating dimensions or generating storage locations there are some limitati
 
 | *Maximum number of characters in the note box*
 |500
-|====
+|===
 
 [[table-limitations-letter-and-number-combinations]]
 .Letter and number combinations for inputs into the generator
 [cols="3,1"]
-|====
+|===
 
 | *Can be used*
 |A to C +
@@ -505,7 +427,150 @@ A to AC +
 |A1 to B1 +
 1A to 1C
 AA to CC
-|====
+|===
+
+[#520]
+== Changing the warehouse structure
+
+You can change the structure of your warehouse after it's been created.
+For example, you can modify existing dimensions or add new dimensions.
+
+[#522]
+=== Changing the name of a dimension
+
+. Go to *Setup » Stock » Warehouse » [Select warehouse] » Storage locations*.
+. Click on material:account_tree[role="blue"] *Structure*.
+. Click on the dimension that you want to change, for example a storage rack, shelf or a storage location. +
+→ Information about the dimension is displayed on the right.
+. Change the name as needed.
+. *Save* (terra:save[role="darkGrey"]) the settings.
+
+[#524]
+=== Moving a dimension
+
+. Go to *Setup » Stock » Warehouse » [Select warehouse] » Storage locations*.
+. Click on material:account_tree[role="blue"] *Structure*.
+. Click on the dimension that you want to change, for example a storage rack, shelf or a storage location. +
+→ Information about the dimension is displayed on the right.
+. Click on *Move* (material:compare_arrows[role="darkGrey"]). +
+→ Further settings become visible.
+. Open the drop-down list *Placement* and select *Insert in front of...* or *Insert behind...*.
+. Use the drop-down list *Target* to specify which element the dimension should be placed before or after.
+. Click on *Select* (material:done[role="darkGrey"]).
+. *Save* (terra:save[role="darkGrey"]) the settings.
+
+[TIP]
+.Positions will be re-assigned
+======
+The position numbers will automatically be updated when you move an element.
+For example, if you move storage location D between A and B, then its position will change from 4 to 2.
+The other storage locations will be repositioned accordingly.
+
+[cols="1,1"]
+|===
+|Before the move |After the move
+
+|Storage location A (Position 1)
+|Storage location A (Position 1)
+
+|Storage location B (Position 2)
+|Storage location D (Position 2)
+
+|Storage location C (Position 3)
+|Storage location B (Position 3)
+
+|Storage location D (Position 4)
+|Storage location C (Position 4)
+
+|===
+======
+
+[#526]
+=== Adding a new dimension
+
+. Go to *Setup » Stock » Warehouse » [Select warehouse] » Storage locations*.
+. Click on material:account_tree[role="blue"] *Structure*.
+. Navigate to the appropriate level and click on icon:plus[role="darkGrey"] *New [Dimension name]*. +
+→ Settings are displayed on the right.
+. Carry out the settings.
+. *Save* (terra:save[role="darkGrey"]) the settings.
+
+[cols="1,3a"]
+|===
+|Setting |Explanation
+
+| *Name*
+|Enter a name for the new dimension.
+
+| *Placement*
+|Decide where the new dimension should be situated.
+
+. Select *Insert in front of...* or *Insert behind...*. +
+→ The drop-down list *Target* becomes visible.
+. Specify which element the dimension should be placed before or after.
+
+*_Note_*:
+Either use this setting _or_ the position.
+If you use this setting for placing the new dimension, then it will not be possible to enter a position number.
+
+| *Position*
+|Decide where the new dimension should be situated.
+Do so by entering a position number.
+
+*_Note_*:
+Either use this setting _or_ the placement.
+If you use this setting for positioning the new dimension, then it will not be possible to select a placement.
+
+//die 3 erklärungen mit includes machen, damit die inhalt an beide stellen innerhalb dieser seite angezeigt wird
+| *Purpose* +
+(Only visible for storage locations)
+|Select the purpose of the storage location. The following purposes are available: +
+
+* Replenishment
+* Picking
+* Incoming items
+* Return
+* Local store
+* Transfer
+* Box
+
+Use the purpose *Box* for link:https://knowledge.plentymarkets.com/automation/processes/mobile-picking[mobile picking]. +
+In addition, you can use the xref:stock-management:items-and-storage-locations.adoc#500[plentyWarehouse App] in order to filter by a specific purpose when searching for storage locations. +
+
+*_Note:_* The purpose does not have any impact on other menus in the plentymarkets back end yet.
+
+| *Status* +
+(Only visible for storage locations)
+|Select a status. The default setting is *Active*. +
+Note that the status *Locked in status 4* is the only one with a specific functionality; all other statuses are just activated.
+
+| *Notes* +
+(Only visible for storage locations)
+|Here you can leave notes regarding the storage location.
+
+//auskommentierte Zeilen - diese Info ist gut und wichtig, aber hier an der falsche Stelle - verschieben während die Seite überarbeitet wird
+// | *Availability*
+// |Indicates, whether a storage location is available. Green means that the storage location does not contain any items; red signals that at least one item is available.
+
+// | *Property*
+// |Select the property of the storage location. Properties have to be xref:stock-management:setting-up-a-warehouse.adoc#900[created] in advance.
+|===
+
+[#528]
+=== Deleting a dimension
+
+. Go to *Setup » Stock » Warehouse » [Select warehouse] » Storage locations*.
+. Click on material:account_tree[role="blue"] *Structure*.
+. Click on the dimension that you want to delete, for example a storage rack, shelf or a storage location. +
+→ Information about the dimension is displayed on the right.
+. Click on material:remove[role="darkGrey"] in the upper right corner.
+
+[IMPORTANT]
+.Before you delete storage locations or dimensions
+======
+* Before you delete a storage location, make sure that it doesn't have any stock.
+* Before you delete a dimension, make sure that it doesn't include any storage locations.
+======
 
 [#600]
 == Deleting stocks and warehouses
