--- a/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/de-de/modules/fulfillment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -215,7 +215,7 @@ Erstelle einen Auftragsstatus für die folgenden zwei Ereignisse:
 [#outbound-auftragsdokumente]
 === Outbound-Auftragsdokumente
 
-In diesem Schritt kannst du wählen, welche Dokumente mit dem Outbound-Auftrag gesendet werden. Standardmäßig wird keines der folgenden Dokumente versendet. Aktiviere (icon:toggle_on[set=material, role=skyBlue]) die Schaltflächen für den Lieferschein, den Rücksendeschein oder das Retourenlabel, wenn diese Dokumente mit dem Outbound-Auftrag gesendet werden sollen.
+In diesem Schritt kannst du wählen, welche Dokumente mit dem Outbound-Auftrag gesendet werden. Standardmäßig wird keines der folgenden Dokumente versendet. Aktiviere (material:toggle_on[role=skyBlue]) die Schaltflächen für den Lieferschein, den Rücksendeschein oder das Retourenlabel, wenn diese Dokumente mit dem Outbound-Auftrag gesendet werden sollen.
 
 [#auftragsstatus-auftragsaenderung-ebay-fulfillment-orange-connex]
 === Status: Auftragsänderungen durch eBay Fulfillment by Orange Connex
