--- a/docs/de-de/modules/maerkte/partials/catalogue-example-fields.adoc
+++ b/docs/de-de/modules/maerkte/partials/catalogue-example-fields.adoc
@@ -20,7 +20,7 @@ Im Folgenden wird beispielhaft beschrieben, wie du dem Feld *{beispiel-marktplat
 → Das Datenfeld wird in der Ansicht hinzugefügt. +
 . Klicke auf das X, um den Bearbeitungsmodus zu schließen.
 . Nimm die weiteren Zuordnungen analog vor. Ordne mindestens alle Pflichtfelder zu.
-. Speichere (terra:save[]) die Einstellungen. +
+. Speichere (terra:save[role="darkGrey"]) die Einstellungen. +
 → Die Zuordnungen werden gespeichert.
 
 ////
