mirakl attribute tool - DE+EN

--- a/docs/de-de/modules/maerkte/partials/mirakl-data-attribute-tool.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-attribute-tool.adoc
@@ -1,10 +1,12 @@
 Mit dem Attribut-Hilfetool kannst du die verschiedenen Attribute suchen und dir die aktuell gültigen Werte für die Attribute ansehen. Um das Tool nutzen zu können, musst du den Assistenten *{assistant-name}* bereits abgeschlossen haben. +
 
-Das Attribut-Hilfetool findest du unter der folgenden URL: `domain/marketplace_extension/attribute_values`.
-Trage anstelle von `domain` deine plenty Domain ein. +
-Würde deine plenty Domain beispielsweise `https://www.meine-plenty-domain.de` lauten, wäre die URL wie folgt aufgebaut: `https://www.meine-plenty-domain.de/{market-attribute-help-tool}_extension/attribute_values`.
+Das Attribut-Hilfetool findest du unter der URL `domain/marketplace_extension/attribute_values`.
+Trage anstelle von `domain` deine plentymarkets Domain ein. +
+*_Beispiel:_* Bei der plentymarkets Domain `https://www.meine-plenty-domain.de` lautet die URL `https://www.meine-plenty-domain.de/{market-attribute-help-tool}_extension/attribute_values`. +
+*_Fehlerbehebung:_* Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen *Hier entsteht dein plentymarkets Shop*? +
+Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentimage::images/mirakl-data-attribute-tool-dfedd.png[]yShop im Menü *Einrichtung » Mandant » Standard » Webshop » Shop sperren*. Vergiss nicht, den plentyShop danach wieder zu sperren.
 
-*_Tipp:_*
+*_Tipp:_* +
 Gib `SAP.TaxIndicator` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Umsatzsteuerklasse* zu finden. +
 Gib `SAP.BaseUnits` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Verkaufsmengeneinheit* zu finden.
 
