--- a/docs/de-de/modules/maerkte/partials/mirakl-data-attribute-tool.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-data-attribute-tool.adoc
@@ -4,7 +4,7 @@ Das Attribut-Hilfetool findest du unter der URL `domain/marketplace_extension/at
 Trage anstelle von `domain` deine plentymarkets Domain ein. +
 *_Beispiel:_* Bei der plentymarkets Domain `https://www.meine-plenty-domain.de` lautet die URL `https://www.meine-plenty-domain.de/{market-attribute-help-tool}_extension/attribute_values`. +
 *_Fehlerbehebung:_* Du kannst nicht auf das Attribut-Hilfetool zugreifen und sieht stattdessen *Hier entsteht dein plentymarkets Shop*? +
-Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentimage::images/mirakl-data-attribute-tool-dfedd.png[]yShop im Menü *Einrichtung » Mandant » Standard » Webshop » Shop sperren*. Vergiss nicht, den plentyShop danach wieder zu sperren.
+Wahrscheinlich ist dein plentyShop gesperrt. Entsperre den plentyShop im Menü *Einrichtung » Mandant » Standard » Webshop » Shop sperren*. Vergiss nicht, den plentyShop danach wieder zu sperren.
 
 *_Tipp:_* +
 Gib `SAP.TaxIndicator` in die Suche des Attribut-Hilfetools ein, um die gültigen Werte für *Umsatzsteuerklasse* zu finden. +
